--- a/Build
+++ b/Build
@@ -13,4 +13,5 @@ sudo docker run --name jenkins-blueocean --restart=on-failure --detach \
   --publish 8080:8080 --publish 50000:50000 \
   --volume jenkins-data:/var/jenkins_home \
   --volume jenkins-docker-certs:/certs/client:ro \
+  --volume /var/run/docker.sock:/var/run/docker.sock \
   myjenkins-blueocean:2.426.2-1
