--- a/Build
+++ b/Build
@@ -1,5 +1,5 @@
 sudo docker network create jenkins
-sudo docker run --name jenkins-docker --rm --detach \
+sudo docker run --name jenkins-docker --detach \
   --privileged --network jenkins --network-alias docker \
   --env DOCKER_TLS_CERTDIR=/certs \
   --volume jenkins-docker-certs:/certs/client \
